--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,9 +28,8 @@ steps:
   entrypoint: /bin/sh
   args:
   - '-c'
-  - |
-    mkdir -p ~/.ssh && \
-    ssh-keyscan github.com >> ~/.ssh/known_hosts && \
+  - |-
+    ssh-keyscan -t rsa github.com >> /root/.ssh/known_hosts && \
     git clone git@github.com:bershin/cloud-deploy-repo.git && \
     cd cloud-deploy-repo && \
     git checkout candidate && \
